# MLBenchmark

./: .gitignore  CMakeLists.txt
include/: Manifest.h  Operation.h  benchmark.h  ops.h  (+7 more)
kernels/: CMakeLists.txt
kernels/conv2d/: all_conv2d_operations.cu  cutlass_tensorop_f16_s1688fprop_analytic_f16_128x128_32x2_nhwc_align1.cu  cutlass_tensorop_f16_s1688fprop_analytic_f16_128x128_32x2_nhwc_align2.cu  cutlass_tensorop_f16_s1688fprop_analytic_f16_128x128_32x2_nhwc_align4.cu  cutlass_tensorop_f16_s1688fprop_analytic_f16_128x128_32x2_nhwc_align8.cu  cutlass_tensorop_f16_s1688fprop_analytic_f16_128x256_32x2_nhwc_align1.cu  cutlass_tensorop_f16_s1688fprop_analytic_f16_128x256_32x2_nhwc_align2.cu  cutlass_tensorop_f16_s1688fprop_analytic_f16_128x256_32x2_nhwc_align4.cu  cutlass_tensorop_f16_s1688fprop_analytic_f16_128x256_32x2_nhwc_align8.cu  cutlass_tensorop_f16_s1688fprop_analytic_f16_128x64_32x2_nhwc_align1.cu  cutlass_tensorop_f16_s1688fprop_analytic_f16_128x64_32x2_nhwc_align2.cu  cutlass_tensorop_f16_s1688fprop_analytic_f16_128x64_32x2_nhwc_align4.cu  cutlass_tensorop_f16_s1688fprop_analytic_f16_128x64_32x2_nhwc_align8.cu  cutlass_tensorop_f16_s1688fprop_analytic_f16_256x128_32x2_nhwc_align1.cu  cutlass_tensorop_f16_s1688fprop_analytic_f16_256x128_32x2_nhwc_align2.cu  cutlass_tensorop_f16_s1688fprop_analytic_f16_256x128_32x2_nhwc_align4.cu  cutlass_tensorop_f16_s1688fprop_analytic_f16_256x128_32x2_nhwc_align8.cu  cutlass_tensorop_f16_s1688fprop_analytic_f16_64x128_32x2_nhwc_align1.cu  cutlass_tensorop_f16_s1688fprop_analytic_f16_64x128_32x2_nhwc_align2.cu  cutlass_tensorop_f16_s1688fprop_analytic_f16_64x128_32x2_nhwc_align4.cu  cutlass_tensorop_f16_s1688fprop_analytic_f16_64x128_32x2_nhwc_align8.cu  cutlass_tensorop_f16_s1688fprop_analytic_f16_64x128_64x2_nhwc_align1.cu  cutlass_tensorop_f16_s1688fprop_analytic_f16_64x128_64x2_nhwc_align2.cu  cutlass_tensorop_f16_s1688fprop_analytic_f16_64x128_64x2_nhwc_align4.cu  cutlass_tensorop_f16_s1688fprop_analytic_f16_64x128_64x2_nhwc_align8.cu  cutlass_tensorop_f16_s1688fprop_analytic_f16_64x64_32x2_nhwc_align1.cu  cutlass_tensorop_f16_s1688fprop_analytic_f16_64x64_32x2_nhwc_align2.cu  cutlass_tensorop_f16_s1688fprop_analytic_f16_64x64_32x2_nhwc_align4.cu  cutlass_tensorop_f16_s1688fprop_analytic_f16_64x64_32x2_nhwc_align8.cu  cutlass_tensorop_f16_s1688fprop_optimized_f16_128x128_32x2_nhwc_align1.cu  cutlass_tensorop_f16_s1688fprop_optimized_f16_128x128_32x2_nhwc_align2.cu  cutlass_tensorop_f16_s1688fprop_optimized_f16_128x128_32x2_nhwc_align4.cu  cutlass_tensorop_f16_s1688fprop_optimized_f16_128x128_32x2_nhwc_align8.cu  cutlass_tensorop_f16_s1688fprop_optimized_f16_128x256_32x2_nhwc_align1.cu  cutlass_tensorop_f16_s1688fprop_optimized_f16_128x256_32x2_nhwc_align2.cu  cutlass_tensorop_f16_s1688fprop_optimized_f16_128x256_32x2_nhwc_align4.cu  cutlass_tensorop_f16_s1688fprop_optimized_f16_128x256_32x2_nhwc_align8.cu  cutlass_tensorop_f16_s1688fprop_optimized_f16_128x64_32x2_nhwc_align1.cu  cutlass_tensorop_f16_s1688fprop_optimized_f16_128x64_32x2_nhwc_align2.cu  cutlass_tensorop_f16_s1688fprop_optimized_f16_128x64_32x2_nhwc_align4.cu  (+273 more)
kernels/conv2d_bias/: all_conv2d_operations.cu  cutlass_tensorop_f16_s1688fprop_analytic_f16_128x128_32x2_nhwc_align1.cu  cutlass_tensorop_f16_s1688fprop_analytic_f16_128x128_32x2_nhwc_align2.cu  cutlass_tensorop_f16_s1688fprop_analytic_f16_128x128_32x2_nhwc_align4.cu  cutlass_tensorop_f16_s1688fprop_analytic_f16_128x128_32x2_nhwc_align8.cu  cutlass_tensorop_f16_s1688fprop_analytic_f16_128x256_32x2_nhwc_align1.cu  cutlass_tensorop_f16_s1688fprop_analytic_f16_128x256_32x2_nhwc_align2.cu  cutlass_tensorop_f16_s1688fprop_analytic_f16_128x256_32x2_nhwc_align4.cu  cutlass_tensorop_f16_s1688fprop_analytic_f16_128x256_32x2_nhwc_align8.cu  cutlass_tensorop_f16_s1688fprop_analytic_f16_128x64_32x2_nhwc_align1.cu  cutlass_tensorop_f16_s1688fprop_analytic_f16_128x64_32x2_nhwc_align2.cu  cutlass_tensorop_f16_s1688fprop_analytic_f16_128x64_32x2_nhwc_align4.cu  cutlass_tensorop_f16_s1688fprop_analytic_f16_128x64_32x2_nhwc_align8.cu  cutlass_tensorop_f16_s1688fprop_analytic_f16_256x128_32x2_nhwc_align1.cu  cutlass_tensorop_f16_s1688fprop_analytic_f16_256x128_32x2_nhwc_align2.cu  cutlass_tensorop_f16_s1688fprop_analytic_f16_256x128_32x2_nhwc_align4.cu  cutlass_tensorop_f16_s1688fprop_analytic_f16_256x128_32x2_nhwc_align8.cu  cutlass_tensorop_f16_s1688fprop_analytic_f16_64x128_32x2_nhwc_align1.cu  cutlass_tensorop_f16_s1688fprop_analytic_f16_64x128_32x2_nhwc_align2.cu  cutlass_tensorop_f16_s1688fprop_analytic_f16_64x128_32x2_nhwc_align4.cu  cutlass_tensorop_f16_s1688fprop_analytic_f16_64x128_32x2_nhwc_align8.cu  cutlass_tensorop_f16_s1688fprop_analytic_f16_64x128_64x2_nhwc_align1.cu  cutlass_tensorop_f16_s1688fprop_analytic_f16_64x128_64x2_nhwc_align2.cu  cutlass_tensorop_f16_s1688fprop_analytic_f16_64x128_64x2_nhwc_align4.cu  cutlass_tensorop_f16_s1688fprop_analytic_f16_64x128_64x2_nhwc_align8.cu  cutlass_tensorop_f16_s1688fprop_analytic_f16_64x64_32x2_nhwc_align1.cu  cutlass_tensorop_f16_s1688fprop_analytic_f16_64x64_32x2_nhwc_align2.cu  cutlass_tensorop_f16_s1688fprop_analytic_f16_64x64_32x2_nhwc_align4.cu  cutlass_tensorop_f16_s1688fprop_analytic_f16_64x64_32x2_nhwc_align8.cu  cutlass_tensorop_f16_s1688fprop_bias_analytic_f16_128x128_32x2_nhwc_align1.cu  cutlass_tensorop_f16_s1688fprop_bias_analytic_f16_128x128_32x2_nhwc_align2.cu  cutlass_tensorop_f16_s1688fprop_bias_analytic_f16_128x128_32x2_nhwc_align4.cu  cutlass_tensorop_f16_s1688fprop_bias_analytic_f16_128x128_32x2_nhwc_align8.cu  cutlass_tensorop_f16_s1688fprop_bias_analytic_f16_128x256_32x2_nhwc_align1.cu  cutlass_tensorop_f16_s1688fprop_bias_analytic_f16_128x256_32x2_nhwc_align2.cu  cutlass_tensorop_f16_s1688fprop_bias_analytic_f16_128x256_32x2_nhwc_align4.cu  cutlass_tensorop_f16_s1688fprop_bias_analytic_f16_128x256_32x2_nhwc_align8.cu  cutlass_tensorop_f16_s1688fprop_bias_analytic_f16_128x64_32x2_nhwc_align1.cu  cutlass_tensorop_f16_s1688fprop_bias_analytic_f16_128x64_32x2_nhwc_align2.cu  cutlass_tensorop_f16_s1688fprop_bias_analytic_f16_128x64_32x2_nhwc_align4.cu  (+585 more)
(+4784 files in other folders)
